--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.0",
     "@material-ui/styles": "^4.1.1",
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "material-table": "^1.39.2",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
