--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@material-ui/core": "^4.1.1",
     "@material-ui/icons": "^4.2.0",
     "@material-ui/styles": "^4.1.1",
+    "apollo-boost": "^0.4.3",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "material-table": "^1.39.2",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
